--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </div>
 
     <footer>www 🎲 Khokhar Aditya 🎲 com</footer>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
